--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -219,6 +219,14 @@ h2.site-page__title:before {
     z-index: 5;
 }
 
+.post-type-archive-programms,
+body.blog,
+.post-type-archive-books{
+    background: rgb(71, 104, 80);
+    background: url('../images/palms.svg') no-repeat center,
+    radial-gradient(circle, rgba(71, 104, 80, 1) 0%, rgba(26, 38, 29, 1) 100%);;
+}
+
 .white{
     color: #fff;
 }
@@ -1105,23 +1113,34 @@ p.popup-description {
     align-items: stretch;
 }
 
-.archive-posts__grid {
-    display: block;
-    margin-top: 40px;
-}
 
 /* index posts*/
 
-.entry-post__inner {
-    padding: 7px;
-    border: 1px solid #cacaca;
-    border-radius: 3px;
+.archive-posts__grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    margin-top: 40px;
 }
 
 .entry-img {
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
     overflow: hidden;
+}
+
+.entry-img:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .7);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .entry-img img {
@@ -1132,10 +1151,10 @@ p.popup-description {
 }
 
 .entry-post__inner {
+    position: relative;
     display: flex;
-    column-gap: 20px;
-    padding: 7px;
-    border: 1px solid #cacaca;
+    padding: 20px;
+    border: none;
     border-radius: 3px;
 }
 
@@ -1143,15 +1162,17 @@ p.popup-description {
     color: var(--black);
 }
 
-.archive-posts__grid .entry-post__inner{
-    margin-bottom: 20px;
-}
-
 .archive-posts__grid .entry-post__inner .entry-post__inner__head {
-    color: var(--black);
+    position: relative;
+    color: #fff;
     display: flex;
+    width: 100%;
+    row-gap: 150px;
+    height: 100%;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 2;
 }
 
 .archive-posts__grid .entry-post__inner .entry-post__inner__head .archive__more-button{
@@ -1186,15 +1207,10 @@ p.popup-description {
     text-align: center;
 }
 
-
-.entry-post__inner__head {
-    width: 70%;
-    color: #fff;
-}
-
 .entry-post__inner__head h3 {
     text-transform: uppercase;
     letter-spacing: 3px;
+    text-align: center;
 }
 
 .entry-post__inner__head__summary {
@@ -1423,8 +1439,8 @@ a.programms__more-button.button:hover{
 
 .books-archive__wrapper{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1%;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5%;
 }
 
 .entry-post__books__item {
@@ -1434,11 +1450,6 @@ a.programms__more-button.button:hover{
     border-radius: 3px;
     background: var(--dark-green);
     border: 1px solid #cacaca;
-    transition: all .3s linear;
-}
-
-.entry-post__books__item:hover {
-    border-color: #fff;
     transition: all .3s linear;
 }
 
@@ -1607,10 +1618,6 @@ span.swiper-pagination-bullet {
 span.swiper-pagination-bullet {
     background: rgba(1, 175, 52, 0.5);
     border-color: rgba(1, 175, 52, 0.5);
-}
-
-.books-archive__wrapper .entry-post__books__item:hover {
-    background: #ededed;
 }
 
 .more-book-button {
@@ -2453,14 +2460,6 @@ body.page-template.page-template-page-programms {
 
     .entry-img {
         width: 100%;
-    }
-
-    .archive-posts__grid .entry-post__inner .entry-post__inner__head {
-        color: var(--black);
-        display: flex;
-        flex-direction: column;
-        margin-top: 20px;
-        justify-content: center;
     }
 
     .archive-posts__grid .entry-post__inner .entry-post__inner__head {
