--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -5,7 +5,7 @@ styles for header theme basic
 :root {
     --black: #252525;
     --green: #01AF34;
-    --light-green: #D6ECDC;
+    --light-green: #a9c9b1;
     --dark-green: #476850;
     --yellow: #F7F300;
 }
