--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -6,7 +6,8 @@ styles for header theme basic
     --black: #252525;
     --green: #01AF34;
     --light-green: #a9c9b1;
-    --dark-green: #476850;
+    /* --dark-green: #476850; */
+    --dark-green: #57665b;
     --yellow: #F7F300;
 }
 
