--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -453,8 +453,9 @@ section.section-hero:after {
     display: block;
     width: 100%;
     height: 100%;
-    background: rgba(0,40,12, 0.8);
-    background: linear-gradient(180deg, rgba(0,0,0, .8) 0%, rgba(0,40,12, 0.8) 50%, rgba(0,0,0, 1) 100%);
+    background: rgba(0, 40, 12, 0.8);
+    background: rgba(28, 50, 34, .7);
+    background: linear-gradient(180deg, rgba(0, 0, 0, .8) 0%, rgba(28, 50, 34, .7) 50%, rgba(0, 0, 0, 1) 100%);
     position: absolute;
     top: 0;
     left: 0;
