--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1517,13 +1517,16 @@ a.programms__more-button.button:hover{
     transition: opacity .7s linear;
 }
 
+.entry-post__books__item .book-link{
+    transition: opacity .7s ease-in;
+}
+
 .entry-post__books__item .book-link:after {
     content: '';
     opacity: 0;
     width: 100%;
     height: 100%;
-    background: rgba(71, 104, 80, .7);
-    backdrop-filter: blur(20px);
+    background: var(--dark-green);
     display: block;
     position: absolute;
     top: 0;
