--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -193,6 +193,8 @@ h2.site-page__title {
 
 h2.site-page__title.toopacity {
     text-align: center;
+    max-width: 70%;
+    margin: 0 auto;
 }
 
 h2.site-page__title:after {
