--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -9,6 +9,7 @@ styles for header theme basic
     /* --dark-green: #476850; */
     --dark-green: #57665b;
     --yellow: #F7F300;
+    --white-gradient: linear-gradient(0deg, rgba(231,231,231,1) 0%, rgba(255,255,255,1) 31%);
 }
 
 
