--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1626,7 +1626,7 @@ a.programms__more-button.button:hover{
 .books-slider__button-prev,
 .books-slider__button-next {
     width: 20px;
-    height: 50px;
+    height: 30px;
     /* background: rgba(25,25,25, .4);
     border-radius: 100%; */
 }
@@ -1634,7 +1634,18 @@ a.programms__more-button.button:hover{
 .books-slider__button-prev,
 .books-slider__button-next {
     position: absolute;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
     cursor: pointer;
+    border-radius: 100%;
+    background: rgba(255, 255, 255, .3);
+    backdrop-filter: blur(50px);
+    filter: blur(50px);
+    -webkit-filter: blur(50px);
+    -moz-backdrop-filter: blur(50px);
+    -ms-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
     bottom: 45%;
     z-index: 5;
 }
