--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1409,12 +1409,12 @@ p.popup-description {
     left: 0;
     display: block;
     position: absolute;
-    background: url(../images/pattern-bricks.svg);
-    background-repeat: repeat-x;
+    background: url(../images/el.svg);
+    background-repeat: no-repeat;
     background-size: 15%;
-    background-position: left 5%;
+    background-position: left top;
     z-index: 5;
-    opacity: .2;
+    opacity: 1;
 } 
 
 .section-programms h2{
@@ -1530,6 +1530,22 @@ a.programms__more-button.button:hover{
     /* width: 48%; */
     margin: 0;
     margin-top: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.swiper-slide.books-slider__slide.swiper-slide-active {
+    position: relative;
+    background: #fff;
+    transform: scale(1.1);
+    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .4));
+    border: 7px solid #fff;
+    z-index: 5;
+    transition: all .3s ease-in-out;
+}
+
+.swiper-slide.books-slider__slide{
+transition: all .3s ease-in-out;
 }
 
 .books-description {
@@ -1588,7 +1604,7 @@ a.programms__more-button.button:hover{
     display: block;
     border-radius: 3px;
     width: 100%;
-    height: 370px;
+    height: 250px;
     overflow: hidden;
     transition: all .3s linear;
 }
