--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1537,9 +1537,9 @@ a.programms__more-button.button:hover{
 .swiper-slide.books-slider__slide.swiper-slide-active {
     position: relative;
     background: #fff;
-    transform: scale(1.1);
+    transform: scale(1.05);
     filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .4));
-    border: 7px solid #fff;
+    /* border: 7px solid #fff; */
     z-index: 5;
     transition: all .3s ease-in-out;
 }
