--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1824,6 +1824,7 @@ background: linear-gradient(0deg, rgba(28,50,34,1) 0%, rgba(87,102,91,1) 100%);
     position: absolute;
     top: 0;
     left: 0;
+    opacity: .5;
     background: url(../images/palms.svg);
     background-size: cover;
 }
