--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1168,8 +1168,8 @@ p.popup-description {
 
 .posts__grid{
     display: grid;
-    gap: 40px;
-    grid-template-columns: repeat(4, 1fr);
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 250px) 30%;
     margin-bottom: 40px;
 }
 
@@ -1996,7 +1996,7 @@ background: linear-gradient(0deg, rgba(28,50,34,1) 0%, rgba(87,102,91,1) 100%);
     overflow: hidden;
     color: #fff;
     width: 100%;
-    padding-top: 7%;
+    padding-top: 3%;
     padding-bottom: 5%;
     background: #151515;
 }
@@ -2781,11 +2781,6 @@ body.page-template.page-template-page-programms {
         align-items: center;
         gap: 20px;
         width: 100%;
-    }
-
-    #footer {
-        padding-top: 40px;
-        padding-bottom: 40px;
     }
 
     .footer-center {
