--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1168,6 +1168,7 @@ p.popup-description {
 .posts__grid{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
     margin-bottom: 40px;
 }
 
@@ -1181,6 +1182,9 @@ p.popup-description {
 .entry-post__inner {
     position: relative;
     column-gap: 50px;
+    cursor: pointer;
+    height: 350px;
+    overflow:hidden;
     padding: 40px 0;
     transition: all .7s ease-in-out;
 }
@@ -1190,29 +1194,82 @@ p.popup-description {
     display: block;
     position: absolute;
     width: 100%;
-    background:#fff;
-    transform: scale(0);
-    height: 1px;
+    /* background: rgba(0, 0, 0, 1); */
+    background: rgba(0, 0, 0, .5);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 13%, rgba(0, 0, 0, 0) 46%, rgba(0, 0, 0, 0.7) 87%, rgba(0, 0, 0, 0.7) 100%);
+    opacity: .5;
+    /* transform: scale(0); */
+    height: 100%;
     left: 0;
     bottom: 0;
+    z-index: 2;
     transition: all .5s ease-in-out;
 }
 
 .entry-post__inner:hover:after{
-transform: scale(1);
+    opacity:1;
 transition: all .5s ease-in-out;
 }
 
+.swiper.posts-slider {
+    height: 400px;
+}
+
+.posts-slider__pagination {
+    position: absolute;
+    z-index: 5;
+}
+.posts-slider__pagination span.swiper-pagination-bullet{
+    background: rgba(255, 255, 255, .5);
+
+}
+.posts-slider__pagination span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    border: 1px solid rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 1);
+}
+
+.posts-slider__pagination {
+    display: flex;
+    width: 100% !important;
+    justify-content: center;
+}
+
 .entry-post__inner .entry-img {
+    position: absolute;
     width: 100%;
-    height: 200px;
-    overflow: hidden;
-    display: block;
-   
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    transition: transform .7s ease-in-out;
+}
+
+.entry-post__inner:hover .entry-img{
+    transform:scale(1.05);
+    transition: transform 2s ease-in-out;
+}
+
+
+.entry-post__inner__head {
+    position: relative;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+    z-index: 3;
 }
 
 .entry-post__inner__head p {
     margin-bottom: 30px;
+}
+
+.entry-post__inner__head span{
+    font-size:18px;
+    text-decoration: underline;
+    font-family: 'Cera', sans-serif;
+    display:block;
+    color: #fff;
+    margin:0 auto;
 }
 
 .posts__grid .entry-post__inner:nth-child(2n) {
