--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1196,8 +1196,8 @@ p.popup-description {
     width: 100%;
     /* background: rgba(0, 0, 0, 1); */
     background: rgba(0, 0, 0, .5);
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.7) 13%, rgba(0, 0, 0, 0) 46%, rgba(0, 0, 0, 0.7) 87%, rgba(0, 0, 0, 0.7) 100%);
-    opacity: .5;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 1) 100%);
+    opacity: 1;
     /* transform: scale(0); */
     height: 100%;
     left: 0;
@@ -1207,7 +1207,7 @@ p.popup-description {
 }
 
 .entry-post__inner:hover:after{
-    opacity:1;
+    opacity:.7;
 transition: all .5s ease-in-out;
 }
 
