--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1471,7 +1471,7 @@ transition: all .5s ease-in-out;
     padding: 7% 3%;
     filter: drop-shadow(0 0 10px rgba(11, 11, 11, .15));
 }
- .section-programms:before{
+ /* .section-programms:before{
     content: '';
     width: 100%;
     height: 100%;
@@ -1485,7 +1485,7 @@ transition: all .5s ease-in-out;
     background-position: left 10%;
     z-index: 5;
     opacity: 1;
-} 
+}  */
 
 .section-programms h2{
     text-align: center;
