--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -848,7 +848,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 span.swiper-pagination-bullet {
     width: 10px;
     height: 10px;
-    border: 2px solid #000;
     background: transparent;
     transition: all .3s linear;
 }
@@ -1459,9 +1458,9 @@ transition: all .5s ease-in-out;
     overflow: hidden;
     position: relative;
     width: 100%;
-    padding: 7% 0;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(0deg, rgba(87, 102, 91, 1) 80%, rgba(255, 255, 255, 1) 80%);
+    padding: 0 0 3% 0;
+    background: var(--dark-green);
+    /* background: linear-gradient(0deg, rgba(87, 102, 91, 1) 80%, rgba(255, 255, 255, 1) 80%); */
     color: #fff;
 }
 
