--- a/wp-content/themes/basic-theme/css/fonts.css
+++ b/wp-content/themes/basic-theme/css/fonts.css
@@ -106,9 +106,11 @@
 @font-face {
     font-family: "Cakra";
     font-weight:400;
-    src: local("Cakra"), 
+    src:
+    /* local("Cakra"),  */
     url(../fonts/Cakra.ttf) format("truetype"), 
-    url(../fonts/Cakra.woff) format("woff"), 
-    url(../fonts/Cakra.woff2) format("woff2");
+    url(../fonts/Cakra.woff2) format("woff2"),
+    url(../fonts/Cakra.woff) format("woff");
+    
     font-display: swap;
 }
